# js-shbank

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
doc/: api.md  architecture.md  url-research.md  v0.0.2-plan.md  v0.0.3-plan.md
memory/: MEMORY.md  project-progress.md  task4-plan.md  task5-plan.md  task7-plan.md  task8-plan.md  task9-plan.md
src/: main.py
src/bsh/: cli.py
src/bsh/models/: product.py
src/bsh/repository/: csv_repository.py  factory.py
src/bsh/scraper/: parser.py
src/js_shbank/: __init__.py  cli.py  main.py
src/js_shbank/calculator/: __init__.py  yield_calculator.py
src/js_shbank/config/: __init__.py  settings.py
src/js_shbank/models/: __init__.py
src/js_shbank/repository/: __init__.py  base.py  csv_repository.py  factory.py
src/js_shbank/scraper/: __init__.py  api_client.py  parser.py
src/js_shbank/web/: __init__.py  app.py
src/models/: product.py
src/repository/: base.py  csv_repository.py  factory.py
src/scraper/: api_client.py  parser.py
tests/: test_api_client.py  test_cli.py  test_csv_repository.py  test_exports.py  test_main_integration.py  test_parser.py  test_product.py  test_product_url.py  test_repository.py  test_settings.py  test_web.py  test_yield_calculator.py
